--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io,pinect</groupId>
+    <groupId>io.pinect</groupId>
     <artifactId>azeron-client</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -45,6 +45,7 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
     </dependencies>
 
     <repositories>
